docs: change responces
